--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,8 @@ jobs:
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
+      - name: Add Go binaries to PATH
+        run: echo "$HOME/go/bin" >> $GITHUB_PATH
+
       - name: Run staticcheck
         run: staticcheck ./...
